<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>CableLossCalculatorWindow</class>
 <widget class="QMainWindow" name="CableLossCalculatorWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>812</width>
    <height>612</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Coaxial Cable Loss Calculator</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
     <layout class="QVBoxLayout" name="mainLayout">
      <item>
       <layout class="QGridLayout" name="controlsGridLayout">
        <item row="0" column="0">
         <widget class="QDoubleSpinBox" name="startFreq_doubleSpinBox"/>
        </item>
        <item row="0" column="1">
         <widget class="QLabel" name="startFreq_label">
          <property name="text">
           <string>MHz</string>
          </property>
         </widget>
        </item>
        <item row="0" column="2">
         <widget class="QSlider" name="freq_horizontalSlider">
          <property name="orientation">
           <enum>Qt::Orientation::Horizontal</enum>
          </property>
         </widget>
        </item>
        <item row="0" column="3">
         <widget class="QDoubleSpinBox" name="endFreq_doubleSpinBox"/>
        </item>
        <item row="0" column="4">
         <widget class="QLabel" name="endFreq_label">
          <property name="text">
           <string>MHz</string>          
          </property>
         </widget>
        </item>
        <item row="1" column="0" colspan="2">
         <layout class="QHBoxLayout" name="lengthLayout">
          <item>
           <widget class="QLabel" name="length_label">
            <property name="text">
             <string>Global Length (m):</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QDoubleSpinBox" name="length_doubleSpinBox">
            <property name="maximum">
             <double>99999.990000000005239</double>
            </property>
            <property name="value">
             <double>1</double>
            </property>
           </widget>
          </item>
         </layout>
        </item>
        <item row="1" column="2">
         <layout class="QHBoxLayout" name="currentFreqLayout">
          <item>
           <spacer name="horizontalSpacer_2">
            <property name="orientation">
             <enum>Qt::Orientation::Horizontal</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>40</width>
              <height>20</height>
             </size>
            </property>
           </spacer>
          </item>
          <item>
           <widget class="QLabel" name="currentFreqTitle_label">
            <property name="text">
             <string>Current Frequency:</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QDoubleSpinBox" name="currentFreq_doubleSpinBox"/>
          </item>
          <item>
           <widget class="QLabel" name="currentFreqUnit_label">
            <property name="text">
             <string>MHz</string>
            </property>
           </widget>
          </item>
          <item>
           <spacer name="horizontalSpacer">
            <property name="orientation">
             <enum>Qt::Orientation::Horizontal</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>40</width>
              <height>20</height>
             </size>
            </property>
           </spacer>
          </item>
         </layout>
        </item>
       </layout>
      </item>
      <item>
       <widget class="QGroupBox" name="cableManager_groupBox">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
          <horstretch>0</horstretch>
          <verstretch>1</verstretch>
         </sizepolicy>
        </property>
        <property name="title">
         <string>Cables</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>812</width>
     <height>24</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
